--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,7 +28,7 @@ body{
 .portada{
     width: 100%;
     height: 100%;
-    background: url(../IMG/portada.png);
+    background: url(../IMG/portada.png); /* Fuente de la imagen: https://www.lucidchart.com/blog/es/metodologia-gestion-proyectos-cascada */
     background-attachment: fixed;
     background-size: cover;
 }
